adding class solutions

--- a/lectures/class_solutions.ipynb
+++ b/lectures/class_solutions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,18 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split, cross_validate\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import Pipeline, make_pipeline\n",
     "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, StandardScaler, MinMaxScaler\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecture 1"
+    "# Lecture 1"
    ]
   },
   {
@@ -187,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecture 2"
+    "# Lecture 2"
    ]
   },
   {
@@ -331,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecture 3"
+    "# Lecture 3"
    ]
   },
   {
@@ -519,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecture 4 - SVM"
+    "# Lecture 4 - SVM"
    ]
   },
   {
@@ -621,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecture 4 - Pipeline"
+    "# Lecture 4 - Pipeline"
    ]
   },
   {
@@ -748,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,20 +783,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "fit_time       0.006609\n",
-       "score_time     0.005555\n",
+       "fit_time       0.009682\n",
+       "score_time     0.006163\n",
        "test_score     0.881633\n",
        "train_score    0.915306\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,11 +818,364 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Lecture 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's Practice\n",
+    "\n",
+    "\n",
+    "```\n",
+    "           name    colour    location    seed   shape  sweetness   water-content  weight  popularity\n",
+    "0         apple       red     canada    True   round     True          84         100      popular\n",
+    "1        banana    yellow     mexico   False    long     True          75         120      popular\n",
+    "2    cantaloupe    orange      spain    True   round     True          90        1360      neutral\n",
+    "3  dragon-fruit   magenta      china    True   round    False          96         600      not popular\n",
+    "4    elderberry    purple    austria   False   round     True          80           5      not popular\n",
+    "5           fig    purple     turkey   False    oval    False          78          40      neutral\n",
+    "6         guava     green     mexico    True    oval     True          83         450      neutral\n",
+    "7   huckleberry      blue     canada    True   round     True          73           5      not popular\n",
+    "8          kiwi     brown      china    True   round     True          80          76      popular\n",
+    "9         lemon    yellow     mexico   False    oval    False          83          65      popular\n",
+    "\n",
+    "```\n",
+    "\n",
+    "1.  What would be the unique values given to the categories in the `popularity` column, if we transformed it with ordinal encoding?\n",
+    "\n",
+    "- `[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]`\n",
+    "- `[0, 1, 2]` \n",
+    "- `[1, 2, 3]`\n",
+    "- `[0, 1, 2, 3]`\n",
+    "\n",
+    "> `[0, 1, 2]` \n",
+    "\n",
+    "2. Does it make sense to be doing ordinal transformations on the `colour` column?\n",
+    "\n",
+    "> No\n",
+    "\n",
+    "3. If we one hot encoded the `shape` column, what datatype would be the output after using `transform`?\n",
+    "\n",
+    "> NumPy array\n",
+    "\n",
+    "4. Which of the following outputs is the result of one-hot encoding the `shape` column?    \n",
+    "\n",
+    "a)    \n",
+    "\n",
+    "``` \n",
+    "array([[0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "       [0, 0, 0, 0, 0, 1, 1, 0, 0, 1],\n",
+    "       [1, 0, 1, 1, 1, 0, 0, 1, 1, 0]])\n",
+    "```\n",
+    "\n",
+    "b)    \n",
+    "\n",
+    "```\n",
+    "array([[0, 0, 1],\n",
+    "       [1, 0, 0],\n",
+    "       [0, 0, 1],\n",
+    "       [0, 0, 1],\n",
+    "       [0, 0, 1],\n",
+    "       [0, 1, 0],\n",
+    "       [0, 1, 0],\n",
+    "       [0, 0, 1],\n",
+    "       [0, 0, 1],\n",
+    "       [0, 1, 0]])\n",
+    "```\n",
+    "\n",
+    "c)\n",
+    "\n",
+    "```\n",
+    "array([[0, 1, 0, 0, 0, 0],\n",
+    "       [0, 0, 0, 1, 0, 0],\n",
+    "       [0, 0, 0, 0, 1, 0],\n",
+    "       [0, 0, 1, 0, 0, 0],\n",
+    "       [1, 0, 0, 0, 0, 0],\n",
+    "       [0, 0, 0, 0, 0, 1],\n",
+    "       [0, 0, 0, 1, 0, 0],\n",
+    "       [0, 1, 0, 0, 0, 0],\n",
+    "       [0, 0, 1, 0, 0, 0],\n",
+    "       [0, 0, 0, 1, 0, 0]])\n",
+    "```\n",
+    "\n",
+    "d) \n",
+    "\n",
+    "```\n",
+    "array([[0],\n",
+    "       [5],\n",
+    "       [0],\n",
+    "       [3],\n",
+    "       [0],\n",
+    "       [0],\n",
+    "       [3],\n",
+    "       [0],\n",
+    "       [5],\n",
+    "       [3],\n",
+    "       [1],\n",
+    "       [4],\n",
+    "       [3],\n",
+    "       [2]])\n",
+    "\n",
+    "```\n",
+    "\n",
+    "> B\n",
+    "\n",
+    "5. On which column(s) would you use `OneHotEncoder(sparse=False, dtype=int, drop=\"if_binary\")`?\n",
+    "\n",
+    "> `seed`, `sweetness`\n",
+    "\n",
+    "\n",
+    "**True or False?**    \n",
+    "    \n",
+    "6. Whenever we have categorical values, we should use ordinal encoding. \n",
+    "\n",
+    "> False\n",
+    "\n",
+    "7. If we include categorical values in our feature table, `sklearn` will throw an error.\n",
+    "\n",
+    "> True\n",
+    "\n",
+    "8. One-hot encoding a column with 5 unique categories will produce 5 new transformed columns.\n",
+    "\n",
+    "> True\n",
+    "\n",
+    "\n",
+    "9. The values in the new transformed columns after one-hot encoding, are all possible integer or float values.\n",
+    "\n",
+    "> False\n",
+    "\n",
+    "10. It’s important to be mindful of the consequences of including certain features in your predictive model.\n",
+    "\n",
+    "> True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's Practice \n",
+    "\n",
+    "\n",
+    "Refer to the dataframe to answer the following question.\n",
+    "```\n",
+    "       colour   location    shape   water_content  weight\n",
+    "0       red      canada      NaN         84          100\n",
+    "1     yellow     mexico     long         75          120\n",
+    "2     orange     spain       NaN         90          NaN\n",
+    "3    magenta     china      round        NaN         600\n",
+    "4     purple    austria      NaN         80          115\n",
+    "5     purple    turkey      oval         78          340\n",
+    "6     green     mexico      oval         83          NaN\n",
+    "7      blue     canada      round        73          535\n",
+    "8     brown     china        NaN         NaN        1743  \n",
+    "9     yellow    mexico      oval         83          265\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    " \n",
+    "1. How many categorical columns are there and how many numeric?\n",
+    "\n",
+    "> 3 categoric columns and 2 numeric columns\n",
+    "\n",
+    "2. What transformations are being done to both numeric and categorical columns?\n",
+    "\n",
+    "> Imputation\n",
+    "\n",
+    "\n",
+    "Use the diagram below to answer the following questions.\n",
+    "\n",
+    "```\n",
+    "Pipeline(\n",
+    "    steps=[('columntransformer',\n",
+    "               ColumnTransformer(\n",
+    "                  transformers=[('pipeline-1',\n",
+    "                                  Pipeline(\n",
+    "                                    steps=[('simpleimputer',\n",
+    "                                             SimpleImputer(strategy='median')),\n",
+    "                                           ('standardscaler',\n",
+    "                                             StandardScaler())]),\n",
+    "                      ['water_content', 'weight', 'carbs']),\n",
+    "                                ('pipeline-2',\n",
+    "                                  Pipeline(\n",
+    "                                    steps=[('simpleimputer',\n",
+    "                                             SimpleImputer(fill_value='missing',\n",
+    "                                                                strategy='constant')),\n",
+    "                                           ('onehotencoder',\n",
+    "                                             OneHotEncoder(handle_unknown='ignore'))]),\n",
+    "                      ['colour', 'location', 'seed', 'shape', 'sweetness',\n",
+    "                                                   'tropical'])])),\n",
+    "         ('decisiontreeclassifier', DecisionTreeClassifier())])\n",
+    "```\n",
+    "\n",
+    "3. How many columns are being transformed in `pipeline-1`?\n",
+    "\n",
+    "> 3\n",
+    "\n",
+    "4. Which pipeline is transforming the categorical columns?\n",
+    "\n",
+    "> pipeline-2\n",
+    "\n",
+    "5. What model is the pipeline fitting on?\n",
+    "\n",
+    "> DecisionTreeClassifier\n",
+    "\n",
+    "**True or False**     \n",
+    "6. If there are missing values in both numeric and categorical columns, we can specify this in a single step in the main pipeline.   \n",
+    "\n",
+    "> False\n",
+    "\n",
+    "7. If we do not specify `remainder=\"passthrough\"` as an argument in `ColumnTransformer`, the columns not being transformed will be dropped.\n",
+    "\n",
+    "> True\n",
+    "\n",
+    "8. `Pipeline()` is the same as `make_pipeline()` but  `make_pipeline()` requires you to name the steps.\n",
+    "\n",
+    "> False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's Practice\n",
+    "\n",
+    "1. \n",
+    "What is the size of the vocabulary for the examples below?\n",
+    "\n",
+    "```\n",
+    "X = [ \"Take me to the river\",\n",
+    "    \"Drop me in the water\",\n",
+    "    \"Push me in the river\",\n",
+    "    \"dip me in the water\"]\n",
+    "```\n",
+    "\n",
+    "> 10\n",
+    "\n",
+    "\n",
+    "2. \n",
+    "\n",
+    "Which of the following is not a hyperparameter of `CountVectorizer()`?   \n",
+    "- `binary`\n",
+    "- `max_features` \n",
+    "- `vocab`\n",
+    "- `ngram_range`\n",
+    "\n",
+    ">  `vocab`\n",
+    "\n",
+    "3. What kind of representation do we use for our vocabulary? \n",
+    "\n",
+    "> Bag of Words \n",
+    "\n",
+    "**True or False**     \n",
+    "\n",
+    "4. As you increase the value for the `max_features` hyperparameter of `CountVectorizer`, the training score is likely to go up.\n",
+    "\n",
+    "> True \n",
+    "\n",
+    "5. If we encounter a word in the validation or the test split that's not available in the training data, we'll get an error.\n",
+    "\n",
+    "> False \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coding Practice \n",
+    "\n",
+    "We are going to bring in a new dataset for you to practice on. (Make sure you've downloaded it from the `data` folder from the `lectures` section in Canvas). \n",
+    "\n",
+    "This dataset contains a text column containing tweets associated with disaster keywords and a target column denoting whether a tweet is about a real disaster (1) or not (0). [[Source](Source)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3219    Buri handwoven bags : • Buri handbag - Php 280...\n",
+       "3825    Energetic and Comedic Redhead Teen, just seen ...\n",
+       "1544    A 63 year old man charged in connection with a...\n",
+       "1050    Water levels in Venice drastically drop two mo...\n",
+       "296     2 buildings on fire at seminole State College ...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Loading in the data\n",
+    "tweets_df = pd.read_csv('data/balanced_tweets.csv').dropna(subset=['target'])\n",
+    "\n",
+    "# Split the dataset into the feature table `X` and the target value `y`\n",
+    "X = tweets_df['text']\n",
+    "y = tweets_df['target']\n",
+    "\n",
+    "# Split the dataset into X_train, X_test, y_train, y_test \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=7)\n",
+    "\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Make a pipeline with `CountVectorizer` as the first step and `SVC()` as the second.\n",
+    "2. Perform 5 fold cross-validation using your pipeline and return the training score. \n",
+    "3. Convert the results into a dataframe. \n",
+    "4. What are the mean training and validation scores? \n",
+    "5. Train your pipeline on the training set.\n",
+    "6. Score the pipeline  on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean training score: 0.9821853538313572\n",
+      "Mean Validation score: 0.8326422696721526\n",
+      "Test score: 0.83451536643026\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Make a pipeline with `CountVectorizer` as the first step and `SVC()` as the second\n",
+    "pipe = make_pipeline(CountVectorizer(), SVC())\n",
+    "\n",
+    "# 2. Perform 5 fold cross-validation using your pipeline and return the training score\n",
+    "cv_scores = cross_validate(pipe, X_train, y_train, return_train_score=True)\n",
+    "\n",
+    "# 3. Convert the results into a dataframe\n",
+    "cv_scores_df = pd.DataFrame(cv_scores)\n",
+    "\n",
+    "# 4. What are the mean training and validation scores?\n",
+    "print('Mean training score:', cv_scores_df.mean()['train_score'])\n",
+    "print('Mean Validation score:', cv_scores_df.mean()['test_score'])\n",
+    "\n",
+    "# 5. Train your pipeline on the training set\n",
+    "pipe.fit(X_train, y_train)\n",
+    "\n",
+    "# 6. Score the pipeline  on the test set\n",
+    "tweet_test_score = pipe.score(X_test, y_test)\n",
+    "print('Test score:', tweet_test_score)"
+   ]
   }
  ],
  "metadata": {
