--- a/assignments/assignment2/assignment2.ipynb
+++ b/assignments/assignment2/assignment2.ipynb
@@ -1120,6 +1120,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Submission to Canvas\n",
+    "\n",
+    "**PLEASE READ: When you are ready to submit your assignment do the following:**\n",
+    "\n",
+    "- Read through your solutions\n",
+    "- **Restart your kernel and clear output and rerun your cells from top to bottom** \n",
+    "- Makes sure that none of your code is broken \n",
+    "- Verify that the tests from the questions you answered have obtained the output \"Success\"\n",
+    "- Convert your notebook to .html format by going to File -> Export Notebook As... -> Export Notebook to HTML\n",
+    "- Upload your `.ipynb` file and the `.html` file to Canvas under Assignment1. \n",
+    "- **DO NOT** upload any `.csv` files. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Congratulations on finishing Assignment 2! Now you are ready to build a simple ML pipeline on real-world datasets!"
    ]
   }
