--- a/lectures/class_solutions.ipynb
+++ b/lectures/class_solutions.ipynb
@@ -1575,6 +1575,311 @@
     "bb_test_score = grid_search.score(X_test, y_test)\n",
     "bb_test_score"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lecture 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's Practice\n",
+    "\n",
+    "1. What is the name of a well-known `Ridge` hyperparameter?\n",
+    "\n",
+    "> `alpha`\n",
+    "\n",
+    "2. What value of this hyperparameter makes it equivalent to using `LinearRegression`?\n",
+    "\n",
+    "> 0 \n",
+    "\n",
+    "Use the following equation to answer the questions below: \n",
+    "\n",
+    "$$ \\text{predicted(backpack_weight)} =  3.02 * \\text{#laptops} + 0.3 * \\text{#pencils} + 0.5 $$\n",
+    "\n",
+    "3. What is our intercept value?\n",
+    "\n",
+    "> 0.5\n",
+    "\n",
+    "4. If I had 2 laptops 3 pencils in my backpack, what weight would my model predict for my backpack?\n",
+    "\n",
+    "> 7.44\n",
+    "\n",
+    "**True or False:**  \n",
+    "5. Ridge is a regression modelling approach.\n",
+    "\n",
+    "> True\n",
+    "\n",
+    "6. Increasing the hyperparameter from Question 1 increases model complexity.  \n",
+    "\n",
+    "> False\n",
+    "\n",
+    "7. `Ridge` can be used with datasets that have multiple features.  \n",
+    "\n",
+    "> True\n",
+    "\n",
+    "8. With `Ridge`, we learn one coefficient per training example.  \n",
+    "\n",
+    "> False\n",
+    "\n",
+    "9. Coefficients can help us interpret our model even if unscaled.  \n",
+    "\n",
+    "> True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's Practice \n",
+    "\n",
+    "We have the following text, which we wish to classify as either a positive or negative movie review.     \n",
+    "Using the words below (which are features in our model) with associated coefficients, answer the next 2 questions.     \n",
+    "The input for the feature value is the number of times the word appears in the review. \n",
+    "\n",
+    "\n",
+    "|   Word            | Coefficient | \n",
+    "|--------------------|-------------|\n",
+    "|excellent           | 2.2         | \n",
+    "|disappointment      | -2.4        |\n",
+    "|flawless            | 1.4         |\n",
+    "|boring              | -1.3        |\n",
+    "|unwatchable         | -1.7        |\n",
+    "\n",
+    "Intercept = 1.3\n",
+    "\n",
+    "\n",
+    "1. What value do you calculate after using the weights in the model above for the above review? \n",
+    "\n",
+    "***I thought it was going to be excellent but instead, it was unwatchable and boring.***\n",
+    "\n",
+    "The input feature value would be the number of times the word appears in the review (like `CountVectorizer`).\n",
+    "\n",
+    "> 0.5\n",
+    "\n",
+    "2. Would the model classify this review as a positive or negative review (classes are specified alphabetically) ?\n",
+    "\n",
+    "- Positive review\n",
+    "\n",
+    "We are trying to predict if a job applicant would be hired based on some features contained in their resume. \n",
+    "\n",
+    "\n",
+    "\n",
+    "Below we have the output of `.predict_proba()` where column 0 shows the probability the model would predict \"hired\" and column 1 shows the probability the model would predict \"not hired\".\n",
+    "\n",
+    "\n",
+    "```out\n",
+    "array([[0.04971843, 0.95028157],\n",
+    "       [0.94173513, 0.05826487],\n",
+    "       [0.74133975, 0.25866025],\n",
+    "       [0.13024982, 0.86975018],\n",
+    "       [0.17126403, 0.82873597]])\n",
+    "```\n",
+    "\n",
+    "Use this output to answer the following questions.\n",
+    "\n",
+    "3. If we had used `.predict()` for these examples instead of `.predict_proba()`, how many of the examples would the model have predicted \"hired\"?\n",
+    "\n",
+    "> 2\n",
+    "\n",
+    "\n",
+    "4. If the true class labels are below, how many examples would the model have correctly predicted with `predict()`? \n",
+    "\n",
+    "```out\n",
+    "['hired', 'hired', 'hired', 'not hired', 'not hired']\n",
+    "```\n",
+    "\n",
+    "> 4\n",
+    "\n",
+    "**True or False?**     \n",
+    "5. Increasing logistic regression's `C` hyperparameter increases the model's complexity.   \n",
+    "\n",
+    "> True \n",
+    "\n",
+    "6. Unlike with `Ridge` regression, coefficients are not interpretable with logistic regression.    \n",
+    "\n",
+    ">. False\n",
+    "7.  `predict` returns the positive class if the predicted probability of the positive class is greater than 0.5.     \n",
+    "\n",
+    "> True \n",
+    "\n",
+    "8. In logistic regression, a function is applied to convert the raw model output into probabilities.    \n",
+    "\n",
+    "> True \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Coding Problem**\n",
+    "\n",
+    "Let’s import the Pokémon dataset from our `data` folder. We want to see how well our model does with logistic regression. Let’s try building a simple model with default parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pk_df = pd.read_csv('data/pokemon.csv')\n",
+    "\n",
+    "train_df, test_df = train_test_split(pk_df, test_size=0.2, random_state=1)\n",
+    "\n",
+    "X_train = train_df.drop(columns=['legendary'])\n",
+    "y_train = train_df['legendary']\n",
+    "X_test = test_df.drop(columns=['legendary'])\n",
+    "y_test = test_df['legendary']\n",
+    "\n",
+    "\n",
+    "numeric_features = [\"attack\",\n",
+    "                    \"defense\" ,\n",
+    "                    \"sp_attack\",\n",
+    "                    \"sp_defense\",\n",
+    "                    \"speed\",\n",
+    "                    \"capture_rt\"]\n",
+    "\n",
+    "drop_features = [\"type\", \"deck_no\", \"gen\", \"name\", \"total_bs\"]\n",
+    "\n",
+    "numeric_transformer = make_pipeline(\n",
+    "    SimpleImputer(strategy=\"median\"),\n",
+    "    StandardScaler())\n",
+    "\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (\"drop\", drop_features),\n",
+    "    (numeric_transformer, numeric_features))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Build and fit a pipeline containing the column transformer and a logistic regression model using the parameter class_weight=\"balanced\" (you will learn about this in lecture 9!).\n",
+    "2. Score your model on the test set.\n",
+    "3. Find the model’s feature coefficients and answer the below questions \n",
+    "    a. Which feature contributes the most in predicting if an example is legendary or not.\n",
+    "    b.As the capture rate value increases, will the model more likely predict a legendary or not legendary Pokémon?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logistic Regression Test Score: 0.9006211180124224\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>coefficients</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>attack</td>\n",
+       "      <td>0.690834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>defense</td>\n",
+       "      <td>1.126300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sp_attack</td>\n",
+       "      <td>1.026617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sp_defense</td>\n",
+       "      <td>0.655162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>speed</td>\n",
+       "      <td>1.116679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>capture_rt</td>\n",
+       "      <td>-0.792950</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     features  coefficients\n",
+       "0      attack      0.690834\n",
+       "1     defense      1.126300\n",
+       "2   sp_attack      1.026617\n",
+       "3  sp_defense      0.655162\n",
+       "4       speed      1.116679\n",
+       "5  capture_rt     -0.792950"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. Build a pipeline containing the column transformer and a Logistic Regression model\n",
+    "# use the parameter class_weight=\"balanced\"\n",
+    "pkm_pipe = make_pipeline(preprocessor, LogisticRegression(class_weight=\"balanced\"))\n",
+    "\n",
+    "# 1. Fit your pipeline on the training data\n",
+    "pkm_pipe.fit(X_train, y_train);\n",
+    "\n",
+    "# 2. Score your model on the test set \n",
+    "lr_scores = pkm_pipe.score(X_test, y_test)\n",
+    "print(\"logistic Regression Test Score:\", lr_scores)\n",
+    "\n",
+    "# Find the model’s feature coefficients\n",
+    "pkm_coefs = pd.DataFrame({'features':numeric_features, 'coefficients':pkm_pipe['logisticregression'].coef_[0]})\n",
+    "pkm_coefs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. Which feature contributes the most in predicting if an example is legendary or not.\n",
+    "> `defense`, this feature has the highest magnitude!\n",
+    "    \n",
+    "b.As the capture rate value increases, will the model more likely predict a legendary or not legendary Pokémon?\n",
+    "> Not Legendary, since the sign of the coefficient is negative. "
+   ]
   }
  ],
  "metadata": {
