--- a/lectures/lecture9.ipynb
+++ b/lectures/lecture9.ipynb
@@ -53,7 +53,9 @@
     "## House Keeping \n",
     "- Big lecture today!\n",
     "- Last class on Wednesday. \n",
-    "- Assignment 3 due on Wednesday."
+    "- Assignment 3 due on Wednesday.\n",
+    "- [My Twitter](https://twitter.com/HayleyFBoyce)\n",
+    "- "
    ]
   },
   {
@@ -2133,11 +2135,11 @@
     "\n",
     "3. How many examples does the model incorrectly predict?\n",
     "\n",
-    "4. What is the recall of the confusion matrix?\n",
+    "4. What is the recall of the confusion matrix assuming that **Forward** is the positive label?\n",
     "\n",
-    "5. What is the precision of the confusion matrix?\n",
+    "5. What is the precision of the confusion matrix assuming that **Forward** is the positive label?\n",
     "\n",
-    "6. What is the f1 score?\n",
+    "6. What is the f1 score assuming that **Forward** is the positive label?\n",
     "\n",
     "\n",
     "**True or False:**   \n",
