added housekeeping item

--- a/lectures/lecture9.ipynb
+++ b/lectures/lecture9.ipynb
@@ -55,7 +55,7 @@
     "- Last class on Wednesday. \n",
     "- Assignment 3 due on Wednesday.\n",
     "- [My Twitter](https://twitter.com/HayleyFBoyce)\n",
-    "- "
+    "- Question 3.2 -> most informative negative words"
    ]
   },
   {
