--- a/lectures/class_solutions.ipynb
+++ b/lectures/class_solutions.ipynb
@@ -2308,6 +2308,63 @@
     "# 3. Save the results in a dataframe.\n",
     "pd.DataFrame(multi_scores)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lecture 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's Practice \n",
+    "\n",
+    "1. Which wrapper is more computationally expensive?\n",
+    "\n",
+    "> One-vs-One\n",
+    "\n",
+    "2. Name a model that can handle multi-class problems without any issues or needing any additional strategies.\n",
+    "\n",
+    "> Decision Trees, K-nn \n",
+    "\n",
+    "3. If I have 6 classes, how many models will be built if I use the One-vs-Rest strategy?\n",
+    "\n",
+    "> 6\n",
+    "\n",
+    "4. If I have 6 classes, how many models will be built if I use the One-vs-One strategy?\n",
+    "\n",
+    "> $6(5)/2 = 15$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Use the diagram below to answer the next few questions: \n",
+    "\n",
+    "<img src=\"imgs/multi-classQ.png\"  width = \"70%\" alt=\"404 image\" />\n",
+    "\n",
+    "5. How many examples did the model correctly predict? \n",
+    "\n",
+    "> 52\n",
+    "\n",
+    "6. How many examples were incorrectly labeled as `G`? \n",
+    "\n",
+    "> 3\n",
+    "\n",
+    "7. How many `F-C` labels were in the data?\n",
+    "\n",
+    "> 6\n",
+    "\n",
+    "**True or False:**    \n",
+    "8. Decision Trees use coefficients for multi-class data.   \n",
+    "\n",
+    "> False\n",
+    "\n",
+    "9. Using 1 target label as the positive class will make all other target labels negative.\n",
+    "\n",
+    "> True\n"
+   ]
   }
  ],
  "metadata": {
