Update intro info

--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro to ML &  Decision Trees\n",
-    "\n",
-    "*Hayley Boyce, April 19th 2021*"
+    "# Intro to ML &  Decision Trees"
    ]
   },
   {
@@ -20,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welcome to Bait 509 - Business Application of Machine Learning."
+    "Welcome to Bait 509 - Business Application of Machine Learning!"
    ]
   },
   {
@@ -52,11 +50,9 @@
    "source": [
     "### Course Structure\n",
     "- 2 lectures per week (Synchonus lecture + class activity)\n",
-    "- My office hours: 1-2pm Thursday on Zoom\n",
-    "- TA office hours: Fridays 12-1 and Wednesday 4-5. (all the links are created \n",
-    "- Camera on policy!\n",
-    "- Course content available on [this website](https://bait509-ubc.github.io/BAIT509/intro.html) or on [Canvas](https://canvas.ubc.ca/courses/58082). \n",
-    "- We will be using [Piazza](https://piazza.com/configure-classes/winterterm22020/bait509ba1) for discussions and questions.\n",
+    "- My office hours: 2-3 pm Thursday on Zoom\n",
+    "- Course content available on [this website](https://bait509-ubc.github.io/BAIT509/intro.html) or on [Canvas](https://canvas.ubc.ca/courses/82520). \n",
+    "- We will be using [Piazza](https://piazza.com/ubc.ca/winterterm22022/bait509ba12021w2) for discussions and questions.\n",
     "- Assessments:\n",
     "\n",
     "| Assessment       | Weight       | Due                            |\n",
@@ -66,7 +62,7 @@
     "| Final Project    | 30%          | May 29th                       |\n",
     "\n",
     "\n",
-    "All assessments will be submitted via Canvas "
+    "All assessments will be submitted via Canvas."
    ]
   },
   {
@@ -76,13 +72,14 @@
     "### Python, Jupyter, Visualizations \n",
     "\n",
     "- In this course we be using Python and Jupyter notebooks for lectures as well as assignments. \n",
-    "- You are free to use [Anaconda distribution](https://www.anaconda.com/distribution/) to install and manage your Python package installations.\n",
-    "- If you are using anaconda, you can install a few key packages we will be using in the course, by typing the following at the command line:\n",
-    "    > `conda install pandas numpy scikit-learn matplotlib jupyter altair seaborn python-graphviz`\n",
+    "- I recommend using the [Miniconda distribution](https://docs.conda.io/en/latest/miniconda.html) to install and manage your Python package installations, but you are free to use either Anaconda or pip if you prefer that.\n",
+    "- If you are using Miniconda or Anaconda, you can install a few key packages we will be using in the course, by typing the following at the command line (the \"Anaconda prompt\" on Windows, and the default terminal application on MacOS/Linux):\n",
+    "    > `conda install xgboost jupyter altair seaborn python-graphviz`\n",
     "\n",
-    "- Or you can simpling use pip and type in at the command line: \n",
-    "    > `pip install pandas numpy scikit-learn matplotlib jupyter altair seaborn graphviz`\n",
+    "- Otherwise you can use pip and type the following at the command line: \n",
+    "    > `pip install xgboost jupyter altair seaborn graphviz`\n",
     "\n",
+    "- Some packages that we will make heavy use of are installed together with the packages above, most notably `pandas`, `numpy`, `matplotlib`, and `scikit-learn`.\n",
     "\n",
     "- We will be making visualizations for this course and I give the option of plotting using any Python library but I strongly recommend getting familar with [`altair`](https://altair-viz.github.io/index.html). I have 2 very quick slide decks that teach you a bit about how to plot using `altair`. \n",
     "From the course [Programming in Python for Data Science](https://prog-learn.mds.ubc.ca/en/)\n",
