--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -4703,7 +4703,7 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
-    "scrolled": true
+    "tags": []
    },
    "outputs": [
     {
@@ -4842,6 +4842,13 @@
     "candy_df = pd.read_csv('data/candybars.csv', index_col=0)\n",
     "candy_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
