--- a/assignments/assignment1/assignment1.ipynb
+++ b/assignments/assignment1/assignment1.ipynb
@@ -1427,7 +1427,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1441,7 +1441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.9"
   },
   "toc": {
    "base_numbering": 1,
