Update assesment table

--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -55,12 +55,13 @@
     "- We will be using [Piazza](https://piazza.com/ubc.ca/winterterm22022/bait509ba12021w2) for discussions and questions.\n",
     "- Assessments:\n",
     "\n",
-    "| Assessment       | Weight       | Due                            |\n",
-    "|     :---:        | :---:        | :---:                          |\n",
-    "| 3 Assignments    | 60%(20% each)| April 28th, May 10th, May 19th |\n",
-    "| 1 Quiz           | 10%          | May 5th (24 hours to complete) |\n",
-    "| Final Project    | 30%          | May 29th                       |\n",
-    "\n",
+    "| Assessment    | Due             | Weight |\n",
+    "| :---:         | :---:           | :---:  |\n",
+    "| Assignment 1  | Jan 12 at 23:59 | 20%    |\n",
+    "| Quiz          | Jan 19 at 23:59 | 10%    |\n",
+    "| Assignment 2  | Jan 24 at 23:59 | 20%    |\n",
+    "| Assignment 3  | Feb 2 at 23:59  | 20%    |\n",
+    "| Final Project | Feb 12 at 23:59 | 30%    |\n",
     "\n",
     "All assessments will be submitted via Canvas."
    ]
@@ -81,12 +82,15 @@
     "\n",
     "- Some packages that we will make heavy use of are installed together with the packages above, most notably `pandas`, `numpy`, `matplotlib`, and `scikit-learn`.\n",
     "\n",
+    "- You will also need install one package via `pip` directly from GitHub (regardless of if you used conda or pip above).\n",
+    "\n",
+    "    `pip install git+git://github.com/mgelbart/plot-classifier.git`\n",
+    "\n",
     "- We will be making visualizations for this course and I give the option of plotting using any Python library but I strongly recommend getting familiar with [`altair`](https://altair-viz.github.io/index.html). I have 2 very quick slide decks that teach you a bit about how to plot using `altair`. \n",
     "From the course [Programming in Python for Data Science](https://prog-learn.mds.ubc.ca/en/)\n",
-    " - Module 1, exercise 31, 32, 33\n",
-    " - Module 2, exercise 29, 30\n",
-    " \n",
-    "And if you want to dive further there is a whole course dedicated to visualizing plots using `altair` called [Data Visualization](https://viz-learn.mds.ubc.ca/en/)."
+    "    - Module 1, exercise 31, 32, 33\n",
+    "    - Module 2, exercise 29, 30\n",
+    "    - And if you want to dive further there is a whole course dedicated to visualizing plots using `altair` called [Data Visualization](https://viz-learn.mds.ubc.ca/en/)."
    ]
   },
   {
@@ -2577,16 +2581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can better visualize what's going on by actually plotting our data and the model's  **decision boundaries**.\n",
-    "\n",
-    "*Note: This `plot_classifier` made by Mike Gelbart, function is available for installation [here](https://github.com/mgelbart/plot-classifier) or using:*\n",
-    ">`pip install git+git://github.com/mgelbart/plot-classifier.git`\n",
-    "\n",
-    "or with conda\n",
-    "\n",
-    "> `conda install git` <br>\n",
-    "> `conda install pip`<br>\n",
-    "> `pip install git+git://github.com/mgelbart/plot-classifier.git`"
+    "We can better visualize what's going on by actually plotting our data and the model's  **decision boundaries**."
    ]
   },
   {
@@ -4880,7 +4875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.9"
   },
   "toc": {
    "base_numbering": "0",
