--- a/lectures/lecture4.ipynb
+++ b/lectures/lecture4.ipynb
@@ -57,6 +57,7 @@
    "source": [
     "## Lecture Learning Objectives \n",
     "\n",
+    "- Explain the general idea of SVMs with RBF kernel.\n",
     "- Identify when to implement feature transformations such as imputation and scaling.\n",
     "- Describe the difference between normalizing and standardizing and be able to use scikit-learn's `MinMaxScaler()` and `StandardScaler()` to pre-process numeric features.\n",
     "- Apply `sklearn.pipeline.Pipeline` to build a machine learning pipeline.\n",
@@ -4287,7 +4288,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4301,7 +4302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.9"
   },
   "toc": {
    "base_numbering": 1,
